Background positioning fixed, no more slipping and sliding on mobile

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -95,7 +95,6 @@ i {
 .tab {
   display: flex;
   justify-content: left;
-  height: inherit;
   position: fixed;
   background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65));
   transition: transform 0.25s ease;
